--- a/project_1/ETL.ipynb
+++ b/project_1/ETL.ipynb
@@ -16,10 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.sql import SparkSession\n",
-    "from pyspark.ml.feature import StringIndexer, StandardScaler,  VectorAssembler\n",
-    "from pyspark.ml.regression import LinearRegression\n",
-    "from pyspark.ml.pipeline import PipelineModel"
+    "from pyspark.sql import SparkSession"
    ]
   },
   {
